# geoenrich

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  data.md  helper-scripts.md  installation.md  introduction.md  scripts.md
docs/src/commands/: coast.md  depth.md  nearest.md  place.md  sea.md
docs/src/reference/: configuration.md  output-columns.md  regions.md  technical-notes.md
scripts/: download_data.sh  enrich.sh
src/: cli.rs  config.rs  io.rs  lib.rs  main.rs  pipeline.rs
src/geo/: mod.rs  projection.rs  vector.rs
src/modules/: coast.rs  depth.rs  mod.rs  nearest.rs  place.rs  sea.rs
tests/: coast.rs  depth.rs  nearest.rs  pipeline.rs  place.rs  sea.rs
