[package]
name = "geoenrich"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Enrich longitude/latitude points with coast distance, bathymetric depth, sea name, and nearest country/municipality"
readme = "README.md"
keywords = ["geospatial", "gis", "oceanography", "parquet", "cli"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rayon = "1"
flate2 = "1"
polars = { version = "0.43", features = ["lazy", "parquet", "csv"] }

# GEBCO bathymetry grid (depth module); links the system HDF5 / NetCDF C
# libraries, same system dependency as ctddump.
netcdf = "0.12"

# Vector geometry for the coast, sea, and place modules: shapefile and GeoJSON
# polygons indexed in rstar R-trees. Point-to-segment distance and point in
# polygon are hand-rolled against the pure-Rust LAEA projection, so `geo` is
# not needed.
rstar = "0.13"
shapefile = "0.9"
geojson = "0.24"

[dev-dependencies]
tempfile = "3"
