[package]
name = "geoenrich"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Enrich longitude/latitude points with coast distance, bathymetric depth, sea name, and nearest country/municipality"
repository = "https://github.com/AIQC-Hub/geoenrich"
homepage = "https://aiqc-hub.github.io/geoenrich/"
documentation = "https://aiqc-hub.github.io/geoenrich/"
readme = "README.md"
keywords = ["geospatial", "gis", "oceanography", "parquet", "cli"]
categories = ["command-line-utilities", "science"]
# Keep the published crate lean: the docs book, CI config, and internal notes
# are not needed to build or use the crate (the scripts are, so they stay).
exclude = ["CLAUDE.md", ".github/", "docs/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rayon = "1"
flate2 = "1"
polars = { version = "0.43", features = ["lazy", "parquet", "csv"] }

# GEBCO bathymetry grid (depth module); links the system HDF5 / NetCDF C
# libraries, same system dependency as ctddump.
netcdf = "0.12"

# Vector geometry for the coast, sea, and place modules: shapefile and GeoJSON
# polygons indexed in rstar R-trees. Point-to-segment distance and point in
# polygon are hand-rolled against the pure-Rust LAEA projection, so `geo` is
# not needed.
rstar = "0.13"
shapefile = "0.9"
geojson = "0.24"

[dev-dependencies]
tempfile = "3"

[features]
# Build HDF5 and netCDF from source instead of linking the system libraries.
# Only needed where those libraries cannot be installed: the prebuilt release
# binaries (so the archive needs no system libraries) and docs.rs. Normal builds
# and `cargo install geoenrich` should leave it off and install libhdf5-dev /
# libnetcdf-dev instead, which is far quicker.
static-netcdf = ["netcdf/static"]

# docs.rs has no libnetcdf and cannot install one, so an ordinary build there
# fails in the netcdf-sys build script and the crate gets no rendered API docs.
# Vendoring the C libraries is the only way around it.
[package.metadata.docs.rs]
features = ["static-netcdf"]
